2003-12-01  Rodrigo Moya <rodrigo@ximian.com>

	* gui/alarm-notify/save.c (save_calendars_to_load): removed this
	function, since we now use the ESourceList to know what calendars
	to load.
	(get_calendars_to_load): moved to config-data.c.
	(save_notification_time, get_saved_notification_time,
	save_blessed_program, is_blessed_program): use the
	shared GConfClient.

	* gui/alarm-notify/config-data.[ch]: use a GConfClient instead of a
	EConfigListener.
	(config_data_get_conf_client): renamed from _get_listener.
	(config_data_get_timezone, config_data_get_24_hour_format): changed
	to use the GConfClient.
	(config_data_get_calendars_to_load): new function.
	(ensure_inited): create the source lists for calendar and tasks here.
	(do_cleanup): cleanup the source lists here.

	* gui/alarm-notify/notify-main.c (load_calendars): use
	config_data_get_calendars_to_load().

2003-11-28  JP Rosevear <jpr@ximian.com>

	* gui/e-tasks.c (e_tasks_delete_completed): we want to skip if it
	*is* read only

2003-11-28  JP Rosevear <jpr@ximian.com>

	* gui/e-meeting-store.c (e_meeting_store_get_type): allocate the
	type information correctly

2003-11-26  Hans Petter Jansson  <hpj@ximian.com>

	* gui/calendar-offline-handler.c (backend_go_offline): e_cal_new () ->
	e_cal_new_from_uri ().
	(backend_go_online): Ditto.
	(calendar_offline_handler_init): Ditto.

	* gui/comp-editor-factory.c (open_client): Ditto.

	* gui/e-itip-control.c (start_calendar_server): Ditto.
	(object_requested_cb): Ditto.

	* gui/e-tasks.c (e_tasks_add_todo_uri): Ditto.

	* gui/gnome-cal.c (gnome_calendar_construct): Ditto.
	(gnome_calendar_add_event_uri): Ditto.

	* gui/alarm-notify/alarm-notify.c (alarm_notify_add_calendar): Ditto.

	* importers/icalendar-importer.c (load_file_fn): Ditto.
	(vcal_load_file_fn): Ditto.
	(gnome_calendar_import_data_fn): Ditto.

	* gui/dialogs/copy-source-dialog.c (copy_source): Pass sources to
	e_cal_new ().

2003-11-24  Rodrigo Moya <rodrigo@ximian.com>
